--- a/Wagenpark/Views/Shared/_LayoutAdmin.cshtml
+++ b/Wagenpark/Views/Shared/_LayoutAdmin.cshtml
@@ -24,10 +24,12 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Dealer", "Index", "DEALER")</li>
-                    <li>@Html.ActionLink("Onderhoud", "Index", "ONDERHOUD" )</li>
-                    <li>@Html.ActionLink("Werkplaats", "Index", "WERKPLAATS")</li>
-                    <li>@Html.ActionLink("Car", "Index", "CAR")</li>
+                    <li>@Html.ActionLink("Dealers", "Index", "DEALER")</li>
+                    <li>@Html.ActionLink("Onderhoud", "Index", "ONDERHOUD")</li>
+                    <li>@Html.ActionLink("Werkplaatsen", "Index", "WERKPLAATS")</li>
+                    <li>@Html.ActionLink("Auto's", "Index", "CAR")</li>
+                    <li>@Html.ActionLink("Overzicht", "Index", "Sum")</li>
+                    <li>@Html.ActionLink("Kostenoverzicht", "Index", "Kosten")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
