--- a/Wagenpark/Views/ONDERHOUD/Create.cshtml
+++ b/Wagenpark/Views/ONDERHOUD/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.OnderhoudsDatum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OnderhoudsDatum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.OnderhoudsDatum, new { @class = "form-control", type = "date" })
                 @Html.ValidationMessageFor(model => model.OnderhoudsDatum, "", new { @class = "text-danger" })
             </div>
         </div>
