--- a/Wagenpark/Views/Shared/_LayoutDealer.cshtml
+++ b/Wagenpark/Views/Shared/_LayoutDealer.cshtml
@@ -6,43 +6,53 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Content/Index.css")
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("ROCit", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Onderhoud", "Index", "ONDERHOUD")</li>
-                    <li>@Html.ActionLink("Werkplaatsen", "Index", "WERKPLAATS")</li>
-                    <li>@Html.ActionLink("Auto's", "Index", "CAR")</li>
-                    <li>@Html.ActionLink("Kostenoverzicht", "Index", "Kosten")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">ROCit</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation" style="">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a href="@Url.Action("Index", "Home")" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="@Url.Action("About", "Home")" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="@Url.Action("Contact", "Home")" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a href="@Url.Action("Index", "ONDERHOUD")" class="nav-link">Onderhoud</a>
+            </li>
+            <li class="nav-item">
+                <a href="@Url.Action("Index", "WERKPLAATS")" class="nav-link">Werkplaats</a>
+            </li>
+            <li class="nav-item">
+                <a href="@Url.Action("Index", "CAR")" class="nav-link">Car's</a>
+            </li>
+            <li class="nav-item">
+                <a href="@Url.Action("Index", "Kosten")" class="nav-link">Kosten</a>
+            </li>
+        </ul>
+        @Html.Partial("_LoginPartial")
+    </div>
+</nav>
+<div class="container body-content">
+    @RenderBody()
+    <hr />
+    <footer>
+        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+    </footer>
+</div>
+
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@RenderSection("scripts", required: false)
 </body>
 </html>
