--- a/Wagenpark/Views/DEALER/Details.cshtml
+++ b/Wagenpark/Views/DEALER/Details.cshtml
@@ -21,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.DealerNr }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wijzig", "Edit", new { id = Model.DealerNr }) |
+    @Html.ActionLink("Terug", "Index")
 </p>
