--- a/Wagenpark/Views/CAR/Details.cshtml
+++ b/Wagenpark/Views/CAR/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>CAR</h4>
+    <h4>Auto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Kenteken }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wijzig", "Edit", new { id = Model.Kenteken }) |
+    @Html.ActionLink("Terug", "Index")
 </p>
