--- a/Wagenpark/Views/CAR/Index.cshtml
+++ b/Wagenpark/Views/CAR/Index.cshtml
@@ -1,16 +1,24 @@
 ﻿@model IEnumerable<Wagenpark.Models.CAR>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "ROCIT";
 }
 
-<h2>Auto's</h2>
+<div style="height: 30px; width: 100%; display:block; background-color: #343a40; border-radius: 10px;">
+    <h2 style="color: white; padding-left: 10px;">Auto's</h2>
+</div>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <div style="border-style: solid; border-width: 2px; width: 138px; border-radius:5px; border-color: #919aa1; background-color:#919aa1;">
+        <a href="@Url.Action("Create")"><i class="fas fa-plus-square" style="font-size: 16px; color: #fff;"></i></a>
+        @Html.ActionLink("Auto toevoegen", "Create", null, new { @style = "color: white;" })
+    </div>
 </p>
 <table class="table">
     <tr>
+        <th>
+            In gebruik
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Kenteken)
         </th>
@@ -21,13 +29,23 @@
             @Html.DisplayNameFor(model => model.AutoType)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DEALER.Naam)
+            Naam Dealer
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @if (item.InUse == 1)
+            {
+                <i class="fas fa-check" style="font-size: 20px; color: yellowgreen;"></i>
+            }
+            else
+            {
+                <i class="fas fa-times-circle" style="font-size: 20px; color: red;"></i>
+            }
+            </td>
         <td>
             @Html.DisplayFor(modelItem => item.Kenteken)
         </td>
@@ -41,9 +59,33 @@
             @Html.DisplayFor(modelItem => item.DEALER.Naam)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Kenteken }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Kenteken }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Kenteken })
+            @if (User.IsInRole("Admin"))
+            {
+                <a href="@Url.Action("Edit", new { id = item.Kenteken })"><i class="fas fa-edit" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                <a href="@Url.Action("Details", new { id = item.Kenteken })"><i class="fas fa-info-circle" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                if (item.InUse == 1)
+                {
+                    <a href="@Url.Action("Change", new { id = item.Kenteken })"><i class="fas fa-times-circle" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                }
+                else
+                {
+                    <a href="@Url.Action("Change", new { id = item.Kenteken })"><i class="fas fa-check" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                }
+                <a href="@Url.Action("Delete", new { id = item.Kenteken })"><i class="fas fa-trash-alt" style="font-size: 20px; color: #919aa1;"></i></a>
+            }
+            else
+            {
+                <a href="@Url.Action("Edit", new { id = item.Kenteken })"><i class="fas fa-edit" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                <a href="@Url.Action("Details", new { id = item.Kenteken })"><i class="fas fa-info-circle" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                if (item.InUse == 1)
+                {
+                    <a href="@Url.Action("Change", new { id = item.Kenteken })"><i class="fas fa-times-circle" style="font-size: 20px; color: #919aa1;"></i></a>
+                }
+                else
+                {
+                    <a href="@Url.Action("Change", new { id = item.Kenteken })"><i class="fas fa-check" style="font-size: 20px; color: #919aa1;"></i></a>
+                }
+            }
         </td>
     </tr>
 }
