--- a/Wagenpark/Views/DEALER/Delete.cshtml
+++ b/Wagenpark/Views/DEALER/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Dealer Verwijderen</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet u zeker dat u deze dealer wilt verwijderen?</h3>
 <div>
     <h4>DEALER</h4>
     <hr />
@@ -24,9 +24,10 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
+        <p style="color:red;">Als het niet lukt om de dealer te verwijderen, dan heeft deze nog beschikbare auto's op zijn naam staan.</p>
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Verwijderen" class="btn btn-default" /> |
+            @Html.ActionLink("Terug", "Index")
         </div>
     }
 </div>
