--- a/Wagenpark/Views/DEALER/Index.cshtml
+++ b/Wagenpark/Views/DEALER/Index.cshtml
@@ -1,13 +1,18 @@
 ﻿@model IEnumerable<Wagenpark.Models.DEALER>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "ROCIT";
 }
 
-<h2>Dealers</h2>
+<div style="height: 30px; width: 100%; display:block; background-color: #343a40; border-radius: 10px;">
+    <h2 style="color: white; padding-left: 10px;">Dealers</h2>
+</div>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <div style="border-style: solid; border-width: 2px; width: 150px; border-radius:5px; border-color: #919aa1; background-color:#919aa1;">
+        <a href="@Url.Action("Create")"><i class="fas fa-plus-square" style="font-size: 16px; color: #fff;"></i></a>
+        @Html.ActionLink("Dealer toevoegen", "Create", null, new { @style = "color: white;" })
+    </div>
 </p>
 <table class="table">
     <tr>
@@ -23,9 +28,9 @@
             @Html.DisplayFor(modelItem => item.Naam)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DealerNr }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DealerNr }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DealerNr })
+            <a href="@Url.Action("Edit", new { id = item.DealerNr })"><i class="fas fa-edit" style="font-size: 20px; color: #919aa1;"> | </i></a>
+            <a href="@Url.Action("Details", new { id = item.DealerNr })"><i class="fas fa-info-circle" style="font-size: 20px; color: #919aa1;"> | </i></a>
+            <a href="@Url.Action("Delete", new { id = item.DealerNr })"><i class="fas fa-trash-alt" style="font-size: 20px; color: #919aa1;"></i></a>
         </td>
     </tr>
 }
