--- a/Wagenpark/Views/Home/Index.cshtml
+++ b/Wagenpark/Views/Home/Index.cshtml
@@ -1,40 +1,41 @@
 ﻿@{
-     ViewBag.Title = "Home Page";
+    ViewBag.Title = "ROCIT";
 }
 
+    <img src="~/Images/audi.jpg" alt="audi" />
 
-<img src="../../Images/audi.jpg" alt="audi"/>
+    <div class="row" style="margin-top: 30px">
+        <div class="col-md-12">
+            <h1>Welkom</h1>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                    Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
+                    Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
+                    Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+                    Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper
+                    ultricies nisi. Nam eget dui.
+                </p>
+            </div>
 
-<div class="row" style="margin-top: 30px">
-    <div class="col-md-12">
-        <h1>Welkom</h1>
-    </div>
-    <div class="row">
-        <div class="col-md-8">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-                Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-                Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
-                Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-                Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper
-                ultricies nisi. Nam eget dui.</p>
+            <div class="col-md-4">
+                <address>
+                    <strong>ROCit</strong><br>
+                    343 Example Street<br>
+                    Antartica, Example 0987<br>
+                    <abbr title="Phone">P:</abbr> (123) 456-7890
+                </address>
+
+                <address>
+                    <strong>Full Name</strong><br>
+                    <a href="mailto:#">exam.ple@ROCit.com</a>
+                </address>
+            </div>
         </div>
 
-        <div class="col-md-4">
-            <address>
-                <strong>ROCit</strong><br>
-                343 Example Street<br>
-                Antartica, Example 0987<br>
-                <abbr title="Phone">P:</abbr> (123) 456-7890
-            </address>
-
-            <address>
-                <strong>Full Name</strong><br>
-                <a href="mailto:#">exam.ple@ROCit.com</a>
-            </address>
-        </div>
     </div>
-
-</div>
 
