--- a/Wagenpark/Views/ONDERHOUD/Index.cshtml
+++ b/Wagenpark/Views/ONDERHOUD/Index.cshtml
@@ -1,16 +1,24 @@
 ﻿@model IEnumerable<Wagenpark.Models.ONDERHOUD>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "ROCIT";
 }
 
-<h2>Onderhoudsbeurten</h2>
+<div style="height: 30px; width: 100%; display:block; background-color: #343a40; border-radius: 10px;">
+    <h2 style="color: white; padding-left: 10px;">Onderhoudsbeurten</h2>
+</div>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <div style="border-style: solid; border-width: 2px; width: 230px; border-radius:5px; border-color: #919aa1; background-color:#919aa1;">
+        <a href="@Url.Action("Create")"><i class="fas fa-plus-square" style="font-size: 16px; color: #fff;"></i></a>
+        @Html.ActionLink("Onderhoudsbeurt toevoegen", "Create", null, new { @style = "color: white;" })
+    </div>
 </p>
 <table class="table">
     <tr>
+        <th>
+            Betaald
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.OnderhoudsDatum)
         </th>
@@ -35,6 +43,16 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @if (item.Paid == 1)
+            {
+                <i class="fas fa-check" style="font-size: 20px; color: yellowgreen;"></i>
+            }
+            else
+            {
+                <i class="fas fa-times-circle" style="font-size: 20px; color: red;"></i>
+            }
+        </td>
+        <td>
             @string.Format("{0:dd-MM-yyyy}", item.OnderhoudsDatum)
         </td>
         <td>
@@ -53,9 +71,25 @@
             @Html.DisplayFor(modelItem => item.WERKPLAATS.Naam)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.OnderhoudsDatum }) |
-            @Html.ActionLink("Details", "Details", new { id = item.OnderhoudsDatum }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.OnderhoudsDatum })
+            @if (User.IsInRole("Admin"))
+            {
+                <a href="@Url.Action("Edit", new { id = item.OnderhoudsDatum.ToString("MM-dd-yyyy") })"><i class="fas fa-edit" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                <a href="@Url.Action("Details", new { id = item.OnderhoudsDatum.ToString("MM-dd-yyyy") })"><i class="fas fa-info-circle" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                if (item.Paid == 1)
+                {
+                    <a href="@Url.Action("Change", new { id = item.OnderhoudsDatum.ToString("MM-dd-yyyy") })"><i class="fas fa-times-circle" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                }
+                else
+                {
+                    <a href="@Url.Action("Change", new { id = item.OnderhoudsDatum.ToString("MM-dd-yyyy") })"><i class="fas fa-check" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                }
+                <a href="@Url.Action("Delete", new { id = item.OnderhoudsDatum.ToString("MM-dd-yyyy") })"><i class="fas fa-trash-alt" style="font-size: 20px; color: #919aa1;"></i></a>
+            }
+            else
+            {
+                <a href="@Url.Action("Edit", new { id = item.OnderhoudsDatum.ToString("MM-dd-yyyy") })"><i class="fas fa-edit" style="font-size: 20px; color: #919aa1;"> | </i></a>
+                <a href="@Url.Action("Details", new { id = item.OnderhoudsDatum.ToString("MM-dd-yyyy") })"><i class="fas fa-info-circle" style="font-size: 20px; color: #919aa1;"></i></a>
+            }
         </td>
     </tr>
 }
